--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,14 @@
 <body>
     <h1>Covid Stats!</h1><br>
     <form method="POST">
-        <label >Enter a Country Code</label><br><br>
-    <input placeholder="Country Code" name="text">
-    <input type="submit">
-</form>
-    <img src="{{image }}">
-
+        <label>Enter country name</label><br><br>
+        <input placeholder="Country name" name="text">
+        <input type="submit">
+    </form>
+    <iframe src="{{ image }}"></iframe>
 
     <p>You have {{ count }} Visitors.</p>
+
+
 </body>
 </html>
